--- a/imports/ui/task.html
+++ b/imports/ui/task.html
@@ -4,6 +4,6 @@
 
     <input type="checkbox" checked="{{checked}}" class="toggle-checked" name="" value="">
 
-    <span>{{text}}</span>
+    <span class="text"><strong>{{username}}</strong> - {{text}}</span>
   </li>
 </template>
